1. fix default profile not showing issue 2. fix scroll displayed in message sender title container

--- a/src/ui/MessageContent/index.scss
+++ b/src/ui/MessageContent/index.scss
@@ -99,7 +99,7 @@
     .sendbird-message-content__middle__sender-name {
       margin-bottom: 4px;
       margin-left: 12px;
-      overflow-x: hidden;
+      overflow: hidden;
       position: relative;
       text-overflow: ellipsis;
       width: 100%;
